# o_proj_swtl_ezpmmoteus

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
.trash/: CMakeLists.txt  udp_koap23_cr.h
.trash/config_templates/: slcm.cmd.conf.json
.trash/examples/differential-joint/: main.cpp
.trash/examples/udp/: slcm_udp.hpp
.trash/gf3/: zero.cpp  zero.h
.trash/lib/: slcm_base.hpp  slcm_parser.hpp  slcm_printer.hpp  slcm_vanilla.cpp  slcm_vanilla.hpp
conf/: 99-servo2040_l.rules  99-servo2040_r.rules  common.cfg  conf-all_pi3hat.sh  conf-bus1_fdcanusb.sh  conf-bus2_fdcanusb.sh  conf-bus3_fdcanusb.sh  conf-leftarm_fdcanusb.sh  conf-neck_fdcanusb.sh  dj_r.cfg  dump.sh  minmax.txt  pid_elbow.cfg  pid_neck.cfg  pid_shoulder_xy.cfg  pid_shoulder_z.cfg  pid_wrist.cfg  slip_elbow.cfg  slip_neck.cfg  slip_shoulder_xy.cfg  slip_shoulder_z.cfg  slip_wrist.cfg
conf/archive/: index.md
conf/archive/202409020741/: medium.cfg
conf/archive/202409041431/: 1-write.cfg  1.cfg  10-write.cfg  10.cfg  11-write.cfg  11.cfg  12-write.cfg  12.cfg  2-write.cfg  2.cfg  3-write.cfg  3.cfg  4-write.cfg  4.cfg  5-write.cfg  5.cfg  6-write.cfg  6.cfg  7-write.cfg  7.cfg  8-write.cfg  8.cfg  9-write.cfg  9.cfg
config/: slcm.positionmode.config.json
config_templates/: slcm.rpl.config.json
deploy/: instructions.md  launch.sh  monitor-pose-save.sh  ssh-access-rpi.sh
example/: simple.cpp
examples/: external_input_sender.sh
examples/debug/: main.cpp
examples/debug/config/: slcm.cmd.conf.json  slcm.positionmode.config.json
examples/differential-joint/: main.cpp  slcm_differential-joint.hpp
examples/differential-joint/config/: slcm.cmd.conf.json  slcm.rpl.conf.json
examples/experiment/: main.cpp
examples/simple/: simple.cpp
examples/simple/config/: slcm.positionmode.config.json
examples/udp/: main.cpp  slcm_udp.hpp
examples/udp/config/: slcm.positionmode.config.json
examples/vanilla/: main.cpp
examples/vanilla/config/: slcm.cmd.conf.json  slcm.positionmode.config.json
lib/: default.slcm.positionmode.config.json  enums.hpp  helpers.hpp  parser.hpp  printer.hpp  servo_system.hpp  slcm.positionmode.config.example.json  slcm_enums.hpp  slcm_multiplex.hpp  slcm_parser.hpp  slcm_printer.hpp  slcm_utils.hpp  som_linuxcppmoteus.hpp
lib/randomentity/ezpmmoteus/: ezpmmoteus_servo.hpp  ezpmmoteus_servosystem.hpp
poses/: gf3-pose_0.json  gf3-pose_1.json  gf3-pose_2.json
robots/gf3/: CMakeLists.txt  executer.h  include-graph.txt  main.cpp  readme.md  servo.h
robots/gf3/cmd_rcvrs/: udp_cr.h  udp_koap23_cr.h
robots/gf3/conf/: common.cfg  conf-all_pi3hat.sh  conf-bus1_fdcanusb.sh  conf-bus2_fdcanusb.sh  conf.exp  conf.sh  dj_l.cfg  minmax.txt  pid.txt  wrist.cfg  zero.cpp  zero.exp  zero.h  zero.sh
robots/gf3/frame_makers/: dj_fix.h  dj_frame_makers.h  dj_move_to.h  dj_move_to_in_vel.h  dj_out_pos.h  dj_out_vel.h  dj_stop.h  frame_makers.h  saj_fix.h  saj_frame_makers.h  saj_move_to.h  saj_move_to_in_vel.h  saj_out_pos.h  saj_out_vel.h  saj_stop.h
robots/gf3/helpers/: globals.h  helpers.h  imports.h
robots/gf3/oneshots/: gf3_oneshots.h  gf3_write.h  oneshots.h
robots/gf3/poses/: gf3-pose_1.json  gf3-pose_11.json  gf3-pose_16064.json  gf3-pose_2.json  gf3-pose_3.json  gf3-pose_48793.json
robots/gf3/rpl_sndrs/: udp_koap23_rs.h  udp_rs.h
robots/gf3/servo_units/: differential_joint.h  gf3.h  single_axis_joint.h
robots/gf3/utils/: beat.h  imports.h  templates.h  utils.h
src/: executer.h  globals.h  main.cpp
src/cmd_rcvrs/: udp_koap23_cr.h
src/conf/: conf-bus1_fdcanusb.sh  conf-bus2_fdcanusb.sh  conf-bus3_fdcanusb.sh  conf-write.cfg
src/frame_makers/: dj_frame_makers.h  dj_out_pos.h  saj_frame_makers.h  saj_out_vel.h
src/gf3/: executer.h  globals.h  include-graph.txt  main.cpp  servo.h
src/gf3/cmd_rcvrs/: udp_cr.h
src/gf3/frame_makers/: dj_fix.h  dj_out_pos.h  dj_out_vel.h  (+6 more)
src/helpers/: globals.h  helpers.h
src/oneshots/: gf3_read.h
src/rpl_sndrs/: udp_rs.h
src/servo_units/: single_axis_joint.h
(+75 files in other folders)
